add permintaan assets
